--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,3 +1,6 @@
+{% extends 'inventory/base.html' %}
+{% block title %}Home | Seavu{% endblock %}
+{% block content %}
 {% if computer_list %}
     <ul>
     {% for computer in computer_list %}
@@ -7,3 +10,4 @@
 {% else %}
     <p>No computers are available.</p>
 {% endif %}
+{% endblock %}
