--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -1,18 +1,24 @@
-{% extends "inventory/base.html" %} {% block title %}Login | Seavu{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <main>
+        {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
 
-{% block content %}
+        <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">Login</button>
+        </form>
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-{{ form }}
-<button type="submit">Login</button>
-</form>
-
-{# Assumes you set up the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
-{% endblock %}
+        {# Assumes you set up the password_reset view in your URLconf #}
+        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+    </main>
+</body>
+</html>
