--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,6 +1,7 @@
 {% extends 'inventory/base.html' %}
 {% block title %}Home | Seavu{% endblock %}
 {% block content %}
+<h1>Welcome {{ user.get_username }}.</h1>
 {% if computer_list %}
     <ul>
     {% for computer in computer_list %}
