--- a/inventory/static/inventory/inspect_software.css
+++ b/inventory/static/inventory/inspect_software.css
@@ -1,5 +1,5 @@
 
-.computer-table {
+.software-table {
     border-collapse: collapse;
     margin: 25px 0;
     min-width: 400px;
@@ -7,15 +7,15 @@
     overflow: hidden;
 }
 
-.computer-table tr th {
+.software-table tr th {
     text-align: left;
     font-weight: bold;
 }
 
-.computer-table th, .computer-table td {
+.software-table th, .software-table td {
     padding: 12px 15px;
 }
 
-.computer-table tbody tr {
+.software-table tbody tr {
     border-bottom: 1px solid #ddd;
 }
