--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,5 +1,5 @@
 {% extends 'inventory/base.html' %}
-{% block title %}Home | Seavu{% endblock %}
+{% block title %}Dashboard | Seavu{% endblock %}
 {% block content %}
 <h1>Welcome {{ user.get_username }}.</h1>
 {% endblock %}
