--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -1,24 +1,35 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'registration/login.css' %}">
     <title>Document</title>
 </head>
 <body>
     <main>
-        {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-        {% endif %}
-
-        <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Login</button>
+        <form class="login-fieldset" method="post" action="{% url 'login' %}">
+            <h1 class="brand">SEAVU</h1>
+            {% csrf_token %}
+            <div class="login-fieldset-errors">{{ form.non_field_errors }}</div>
+            <div class="login-field-errors">{{ form.username.errors }}</div>
+            <div class="login-field">
+                <input type="text" name="username" placeholder="Username"><span class="material-symbols-outlined">person</span>
+            </div>
+            <div class="login-field-errors">{{ form.password.errors }}</div>
+            <div class="login-field">
+                <input type="password" name="password" placeholder="Password"><span class="material-symbols-outlined">lock</span>
+            </div>
+            <div class="login-forgot">
+                <a href="">Forgot password?</a>
+            </div>
+            <button class="login-btn" type="submit">Login</button>
+            <div class="login-register">
+                <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+            </div>
         </form>
-
-        {# Assumes you set up the password_reset view in your URLconf #}
-        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
     </main>
 </body>
 </html>
