--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'registration/login.css' %}">
-    <title>Document</title>
+    <title>Login | SEAVU</title>
 </head>
 <body>
     <main>
