--- a/inventory/static/inventory/base.css
+++ b/inventory/static/inventory/base.css
@@ -2,12 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 :root {
-    box-sizing: border-box;
-    font-size: 16px;
-    font-family: "Work Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
     --palette-first: rgb(34, 87, 122);
     --palette-second: rgb(56, 163, 165);
     --palette-third: rgb(87, 204, 153);
@@ -18,82 +12,104 @@
 body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    display: table;
+    content: '';
+    clear: none;
 }
 
 main {
-    margin-left: 4.5rem;
-    padding: 0.2rem 2rem;
+    position: absolute;
+    top: 0px;
+    left: 60px;
+    width: calc(100% - 60px);
 }
 
-.navbar {
-    width: 4.5rem;
+main .wrapper {
+    padding: 1rem 2rem;
+}
+
+.sidebar {
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    width: 60px;
     height: 100vh;
-    position: fixed;
-    background-color: var(--palette-first);
-    transition: width 200ms ease;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+    background: var(--palette-first);
+    overflow: hidden;
+    transition: all 500ms ease-in-out;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+    z-index: 1;
 }
 
-.navbar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.sidebar:hover {
+    width: 250px;
+}
+
+.sidebar .wrapper {
+    width: 250px;
     height: 100%;
 }
 
-.navbar-nav li a {
+.sidebar .logo {
+    padding: 20px 0px;
     display: flex;
-    align-items: center;
-    height: 4.5rem;
-    color: white;
-    text-decoration: none;
-    user-select: none;
+    justify-content: center;
 }
 
-.navbar-brand {
+.sidebar .logo span {
+    color: white;
     font-family: "Righteous", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 14px;
-    display: flex;
-    align-items: center;
-    height: 4.5rem;
+    width: 60px;
+    text-align: center;
+    display: block;
+}
+
+.sidebar .links {
+    padding: 0px 2px;
+}
+
+.sidebar .links .link {
+    margin: 8px 0px;
+    height: 50px;
     color: white;
     text-decoration: none;
-    user-select: none;
+    display: flex;
+    align-items: center;
+    padding: 0px 12px;
+    border-radius: 5px;
+    transition: all 300ms ease-in-out;
 }
 
-.navbar-item {
+.sidebar .links .link .material-symbols-outlined {
+    font-size: 30px;
+    display: inline-block;
+    width: 30px;
+    margin: 0px 0px;
+}
+
+.sidebar .links .link span {
+    display: inline-block;
+    font-size: 17px;
+    margin-left: 20px;
+}
+
+.sidebar .divider {
+    border-bottom: 1px solid white;
+    margin: 20px 0px;
     width: 100%;
-    margin-left: 2.2rem;
-    transition: all 100ms ease;
 }
 
-.navbar-item:hover {
-    font-size: 19px;
-}
-
-.navbar-item.logout {
-    margin-top: auto;
-}
-
-.material-symbols-outlined.navbar-symbol {
-    font-size: 35px;
-    font-variation-settings: 'OPSZ' 35;
-}
-
-.link-text {
-    display: none;
-    margin-left: 1rem;
-}
-
-.navbar:hover {
-    width: 13rem;
-}
-
-.navbar:hover .link-text {
-    display: block;
+.sidebar .links .link:hover {
+    background: #1f252d;
+    color: #fff;
+    cursor: pointer;
 }
