--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -13,18 +13,40 @@
     </form>
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="navbar-nav">
-            <li class="navbar-brand">SEAVU</li>
-            <li class="navbar-item"><a href="{% url 'index' %}"><span class="material-symbols-outlined navbar-symbol">dashboard</span><span class="link-text">Dashboard</span></a></li>
-            <li class="navbar-item"><a href="{% url 'inventory' %}"><span class="material-symbols-outlined navbar-symbol">inventory_2</span><span class="link-text">Inventory</span></a></li>
-            <li class="navbar-item"><a href="{% url 'software' %}"><span class="material-symbols-outlined navbar-symbol">sdk</span><span class="link-text">Software</span></a></li>
-            <li class="navbar-item"><a href="{% url 'licences' %}"><span class="material-symbols-outlined navbar-symbol">inventory</span><span class="link-text">Licences</span></a></li>
+    <div class="sidebar">
+        <div class="sidebar-wrapper">
+            <div class="logo">
+                <span>SEAVU</span>
+            </div>
+            <div class="links">
+                <a class="link" href="{% url 'index' %}">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span>Dashboard</span>
+                </a>
+                <a class="link" href="{% url 'inventory' %}">
+                    <span class="material-symbols-outlined">inventory_2</span>
+                    <span>Inventory</span>
+                </a>
+                <a class="link" href="{% url 'software' %}">
+                    <span class="material-symbols-outlined">sdk</span>
+                    <span>Software</span>
+                </a>
+                <a class="link" href="{% url 'licences' %}">
+                    <span class="material-symbols-outlined">inventory</span>
+                    <span>Licences</span>
+                </a>
+            </div>
             {% if user.is_authenticated %}
-            <li class="navbar-item logout"><a href="javascript:{}" onclick="document.getElementById('logout-form').submit();"><span class="material-symbols-outlined navbar-symbol">logout</span><span class="link-text">Logout</span></a></li>
+            <div class="divider"></div>
+            <div class="links">
+                <a class="link" href="javascript:{}" onclick="document.getElementById('logout-form').submit();">
+                    <span class="material-symbols-outlined">logout</span>
+                    <span>Logout</span>
+                </a>
+            </div>
             {% endif %}
-        </ul>
-    </nav>
-    <main>{% block content %}{% endblock %}</main>
+        </div>
+    </div>
+    <main><div class="wrapper">{% block content %}{% endblock %}</div></main>
 </body>
 </html>
