--- a/inventory/static/inventory/add_computer.css
+++ b/inventory/static/inventory/add_computer.css
@@ -15,6 +15,7 @@
     border-radius: 7.5px;
     border: 1px solid #ddd;
     transition: .3s border-color;
+    min-width: 10rem;
 }
 
 .field-computer input:hover, select:hover {
