reuse model forms

--- a/inventory/templates/inventory/inventory.html
+++ b/inventory/templates/inventory/inventory.html
@@ -27,7 +27,7 @@
                         <td>{{ computer.model }}</td>
                         <td>{{ computer.category }}</td>
                         <td>
-                            <a class="action" href="{% url 'inspect-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">list</span></a>
+                            <a class="action" href="{% url 'update-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">list</span></a>
                             <a class="action" href="{% url 'delete-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">delete</span></a>
                         </td>
                     </tr>
