remove delete button on templates

--- a/inventory/templates/inventory/software.html
+++ b/inventory/templates/inventory/software.html
@@ -22,7 +22,9 @@
                         <td>{{ software.has_licence }}</td>
                         <td>
                             <a class="action" href="{% url 'update-software' software_id=software.id %}"><span class="material-symbols-outlined">list</span></a>
-                            <a class="action" href="{% url 'delete-software' software_id=software.id %}"><span class="material-symbols-outlined">delete</span></a>
+                            {% if request.user.is_staff %}
+                                <a class="action" href="{% url 'delete-software' software_id=software.id %}"><span class="material-symbols-outlined">delete</span></a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
