--- a/inventory/templates/inventory/inventory.html
+++ b/inventory/templates/inventory/inventory.html
@@ -28,7 +28,9 @@
                         <td>{{ computer.category }}</td>
                         <td>
                             <a class="action" href="{% url 'update-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">list</span></a>
-                            <a class="action" href="{% url 'delete-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">delete</span></a>
+                            {% if request.user.is_staff %}
+                                <a class="action" href="{% url 'delete-computer' computer_id=computer.id %}"><span class="material-symbols-outlined">delete</span></a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
