--- a/inventory/static/inventory/base.css
+++ b/inventory/static/inventory/base.css
@@ -87,6 +87,15 @@ main .wrapper {
     padding: 0px 12px;
     border-radius: 5px;
     transition: all 300ms ease-in-out;
+    width: calc(100% - 25px);
+}
+
+.sidebar .links .link.logout {
+    width: calc(100% - 1px);
+    background: none;
+	border: none;
+	font: inherit;
+	outline: inherit;
 }
 
 .sidebar .links .link .material-symbols-outlined {
