--- a/inventory/static/inventory/software.css
+++ b/inventory/static/inventory/software.css
@@ -1,9 +1,18 @@
 
+.actions {
+    display: flex;
+}
+
 .action {
-    color: inherit;
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0 5px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
     text-decoration: none;
     user-select: none;
-    cursor: pointer;
 }
 
 .action .material-symbols-outlined {
