--- a/inventory/templates/inventory/update_computer.html
+++ b/inventory/templates/inventory/update_computer.html
@@ -88,7 +88,7 @@
             {{ form.gpu }}
         </div>
         <div class="field-computer">
-            <button type="submit">Submit</button>
+            <button type="submit" onclick="return confirm('Are you sure you want to save?')">Update</button>
         </div>
     </form>
 </div>
