--- a/inventory/templates/inventory/update_software.html
+++ b/inventory/templates/inventory/update_software.html
@@ -23,7 +23,7 @@
             {{ form.has_licence }}
         </div>
         <div class="field-software">
-            <button type="submit">Submit</button>
+            <button type="submit" onclick="return confirm('Are you sure you want to save?')">Update</button>
         </div>
     </form>
 </div>
