--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -13,16 +13,12 @@
     </form>
 </head>
 <body>
-    <div class="sidebar">
-        <div class="sidebar-wrapper">
+    <div class="wrapper">
+        <div class="sidebar">
             <div class="logo">
                 <span>SEAVU</span>
             </div>
             <div class="links">
-                <a class="link" href="{% url 'index' %}">
-                    <span class="material-symbols-outlined">dashboard</span>
-                    <span>Dashboard</span>
-                </a>
                 <a class="link" href="{% url 'inventory' %}">
                     <span class="material-symbols-outlined">inventory_2</span>
                     <span>Inventory</span>
@@ -31,22 +27,30 @@
                     <span class="material-symbols-outlined">sdk</span>
                     <span>Software</span>
                 </a>
-                <a class="link" href="{% url 'licences' %}">
-                    <span class="material-symbols-outlined">inventory</span>
-                    <span>Licences</span>
-                </a>
             </div>
             {% if user.is_authenticated %}
-                <div class="divider"></div>
-                <div class="links">
-                    <button class="link logout" type="submit" form="logout-form" onclick="return confirm('Are you sure you want to logout?')">
-                        <span class="material-symbols-outlined">logout</span>
-                        <span>Logout</span>
-                    </button>
-                </div>
+            <div class="divider"></div>
+            <div class="links">
+                <button class="link logout" type="submit" form="logout-form" onclick="return confirm('Are you sure you want to logout?')">
+                    <span class="material-symbols-outlined">logout</span>
+                    <span>Logout</span>
+                </button>
+            </div>
             {% endif %}
         </div>
+        <main>
+            {% if messages %}
+            <div class="message-wrapper">
+                {% for message in messages %}
+                <span{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</span>
+                {% endfor %}
+            </div>
+            {% endif %}
+            <div class="content-wrapper">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </main>
     </div>
-    <main><div class="wrapper">{% block content %}{% endblock %}</div></main>
 </body>
 </html>
