--- a/inventory/static/inventory/base.css
+++ b/inventory/static/inventory/base.css
@@ -18,6 +18,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    overscroll-behavior: contain;
 }
 
 .wrapper {
