--- a/inventory/static/inventory/base.css
+++ b/inventory/static/inventory/base.css
@@ -18,11 +18,12 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    overscroll-behavior: contain;
 }
 
 .wrapper {
     display: flex;
+    height: 100vh;
+    overflow: auto;
 }
 
 main {
@@ -68,7 +69,7 @@ main {
     flex-shrink: 0;
     top: 0;
     width: 60px;
-    height: 100vh;
+    height: 100%;
     background: var(--palette-first);
     transition: all 500ms ease-in-out;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
