register form fix

--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -34,8 +34,8 @@
             <div class="register-field-errors">{{ employee_form.occupation.errors }}</div>
             <div class="register-field">
                 <select name="occupation" id="occupation">
-                    <option value="Full">Full</option>
-                    <option value="Part">Part</option>
+                    <option value="Full-time">Full-time</option>
+                    <option value="Part-time">Part-time</option>
                     <option value="Contractor">Contractor</option>
                     <option value="Volunteer">Volunteer</option>
                     <option value="Other">Other</option>
