--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -1,3 +1,8 @@
+<!-- 
+    (Codingflag, 2021)
+    (Parker-Jones, 2018)
+    https://stackoverflow.com/questions/16849117/html-how-to-do-a-confirmation-popup-to-a-submit-button-and-then-send-the-reque#:~:text=For%20a%20Django%20form%2C%20you,')%22%3E&text=using%20this%20function%20on%20submit%20button%20you%20will%20get%20what%20you%20expect.
+ -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
