--- a/inventory/templates/inventory/software.html
+++ b/inventory/templates/inventory/software.html
@@ -1,3 +1,6 @@
+<!-- 
+    (dcode, 2019)
+ -->
 {% extends 'inventory/base.html' %} {% block title %}Software | Seavu{% endblock %}
 {% load static %}
 {% block extrahead %}<link rel="stylesheet" href="{% static 'inventory/software.css' %}">{% endblock %}
