--- a/inventory/static/inventory/base.css
+++ b/inventory/static/inventory/base.css
@@ -1,3 +1,7 @@
+/* 
+(Codingflag, 2021)
+(Parker-Jones, 2018)
+*/
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
